[gd_scene load_steps=3 format=3 uid="uid://cthrecnsevm8"]

[ext_resource type="Texture2D" uid="uid://c4yq84u64ly50" path="res://drawing.png" id="1_esd0m"]
[ext_resource type="Script" path="res://menus/end_menu/drawing_panel.gd" id="1_qh7bt"]

[node name="DrawingPanel" type="Panel"]
custom_minimum_size = Vector2(384, 272)
size_flags_horizontal = 8
script = ExtResource("1_qh7bt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "  Dams4K"
vertical_alignment = 2

[node name="DrawingTextureRect" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_esd0m")
expand_mode = 5
stretch_mode = 5

[node name="ShowTimer" type="Timer" parent="."]

[connection signal="timeout" from="ShowTimer" to="." method="_on_show_timer_timeout"]
